			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

==============================
VERSION 5.6.9 (March 26, 2006)
==============================

  * ADDED: library(prolog_xref): Cross-referencer core.  Documented cross
    referencer interfaces

  * FIXED: exception hook clears debugmode.

  * PORT: Some Windows path problems and cleanup issues.  Patch by
    Marc-Antoine Ruel.

  * FIXED: Behaviour of term_variables/2,3 in the tracer.  Leslie de
    Koninck.

==============================
VERSION 5.6.8 (March 12, 2006)
==============================

  * FIXED: Kill xterms associated with threads on halt.

  * PORT: port open_xterm/4 to MacOS X.

  * ADDED: Moved thread-debugging utilities from SeRQL library to main
    library and documented them.  gdebug, tdebug, tnodebug, tspy, tprofile.
    See chapter on threads for details.  Avoid attaching a console on debug
    mode when using the graphical debugger.

  * FIXED: Handle exceptions from arithmetic functions defined in Prolog.
    Mauro Di Nuzzo.

==============================
VERSION 5.6.7 (March 08, 2006)
==============================

  * FIXED: format ~w: report errors of write/1. Matt Lilley.

  * FIXED: Memory leak in format ~f using rational numbers as arguments.
    Mike Elston.

  * PORT: Float issues on Alpha.  Roberto Bagnara.  Also found a bug in
    GCC 4.0.2 on Alpha/Linux.  Reported to GCC bugzilla. Turned out to
    be a bug in the kernel headers.  Uncomment HAVE_GETTID in config.h
    on systems with 2.4 kernels.

  * ADDED: allow `repairing' undefined global variables.  After discussion
    on mailinglist.

=================================
VERSION 5.6.6 (February 24, 2006)
=================================

  * FIXED: Bug in prolog_exception_hook/4 if handler failed.
